# afrobeat

./: .coveragerc  .env.example  .gitignore  AUTHORS.rst  Afrobeats_Music_Generator.md  Business_Model_Technology_and_Investment_Plan.md  Business_Plan.md  CLAUDE.md  CONTRIBUTING.rst  Ideas.md  LICENSE.txt  Makefile  Pitch_Deck.md  README.md  README.rst  docker-compose.override.yml  docker-compose.yml  generate_song.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  security.yml
Arch/: Arch-1.md
docs/: API.md  ARCHITECTURE.md  FINE_TUNING.md  FMEA.md  RUNBOOKS.md  conf.py  index.rst
docs/marketing/: one-pager.html  pitch-deck.html  product-overview.html
docs/research/: afrobeats-generator-research.md  product-spec.md  song-structure-analysis.md
infra/k8s/: configmap.yaml  cronjobs.yaml  externalsecret.yaml  ingress.yaml  namespace.yaml  network-policies.yaml  rbac.yaml
infra/k8s/api/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
infra/k8s/ml/: deployment.yaml  hpa.yaml  pdb.yaml
infra/k8s/monitoring/: servicemonitor.yaml
infra/k8s/web/: deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
infra/k8s/worker/: deployment.yaml  hpa.yaml  pdb.yaml
infra/monitoring/: alertmanager.yml  prometheus-rules.yml  prometheus.yml
infra/monitoring/grafana/dashboards/: celery.json  ml-service.json  operations.json  postgres.json  redis.json
infra/monitoring/grafana/provisioning/: dashboards.yml
infra/monitoring/grafana/provisioning/dashboards/: provider.yml
infra/monitoring/grafana/provisioning/datasources/: datasources.yml
infra/terraform/: main.tf  variables.tf  versions.tf
libs/audio/: pyproject.toml
libs/audio/src/gbedu_audio/: __init__.py  _base.py  analysis.py  conversion.py  effects.py  mastering.py  pipeline.py  separation.py
libs/audio/tests/: test_audio_smoke.py
libs/core/: pyproject.toml
libs/core/src/gbedu_core/: __init__.py  _uuid7.py  config.py  db.py  errors.py  health.py  logging.py  security.py  ssrf.py  telemetry.py
libs/core/src/gbedu_core/models/: __init__.py  auth.py  job.py  marketplace.py  payment.py  track.py  user.py  voice.py
libs/core/src/gbedu_core/schemas/: __init__.py
migrations/: alembic.ini  env.py
migrations/versions/: 0001_initial_schema.py  0002_seed_voice_models.py  0003_add_corpus_enum_values.py  0004_add_expansion_enum_values.py  0005_add_webhook_events.py  0006_add_track_metadata_jsonb.py
scripts/: analyse_corpus.py  migration_safety_check.py  smoke_test.py
services/api/: .dockerignore  Dockerfile  pyproject.toml
services/api/src/gbedu_api/: __init__.py  config.py  deps.py  main.py  worker_tasks.py
services/api/src/gbedu_api/middleware/: logging.py  request_id.py
services/api/src/gbedu_api/routers/: auth.py  contact.py  generations.py  health.py  marketplace.py  payments.py  tracks.py  users.py  voice_models.py
services/api/src/gbedu_api/services/: auth_service.py  email_service.py  generation_service.py  ml_client.py  storage_service.py
services/api/src/gbedu_api/templates/email/: generation_complete.html  reset_password.html  verify_email.html  welcome.html
services/ml/: .dockerignore  Dockerfile  install_rvc.sh  pyproject.toml
services/ml/src/gbedu_ml/: __init__.py  config.py  main.py  pipeline.py
services/ml/src/gbedu_ml/inference/: __init__.py  lyric_generator.py  music_generator.py  vocal_synthesizer.py
services/ml/src/gbedu_ml/language/: __init__.py  pidgin_patterns.py  quality_gate.py
services/ml/src/gbedu_ml/models/: __init__.py  ace_step.py  base.py  stable_audio.py  yue.py
services/ml/src/gbedu_ml/prompts/: __init__.py  afrobeats.py
services/ml/tests/: test_language_quality.py
services/web/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
services/web/src/: middleware.ts  proxy.ts
services/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
services/web/src/app/contact/: page.tsx
services/web/src/app/privacy/: page.tsx
services/web/src/app/terms/: page.tsx
services/web/src/app/upgrade/: page.tsx
services/web/src/components/layout/: navbar.tsx
services/web/src/store/: auth.ts  generation.ts
services/worker/: Dockerfile  pyproject.toml
services/worker/src/gbedu_worker/: __init__.py  celery_app.py  db.py  exceptions.py  storage.py
services/worker/src/gbedu_worker/pipelines/: __init__.py  generation_pipeline.py
services/worker/src/gbedu_worker/tasks/: __init__.py  audio.py  cleanup.py  dlq.py  generation.py  notifications.py  payments.py  voice.py
services/worker/src/gbedu_worker/templates/email/: base.html  generation_complete.html  subscription_confirmation.html  welcome.html
src/afrobeat/: skeleton.py
tests/: conftest.py  test_skeleton.py
tests/chaos/: scenarios.py  toxiproxy.json
tests/integration/: test_api_http.py  test_auth_flow.py  test_chaos.py  test_generation_flow.py  test_payment_webhooks.py
tests/load/: README.md  locustfile.py  smoke.js
tests/unit/: test_api_auth_routes.py  test_api_auth_service.py  test_api_contact_routes.py  test_api_deps.py  test_api_generation_service.py  test_api_generations_routes.py  test_api_health_routes.py  test_api_marketplace_routes.py  test_api_ml_client.py  test_api_payments_routes.py  test_api_storage_service.py  test_api_tracks_routes.py  test_api_users_routes.py  test_api_voice_models_routes.py  test_audio_analysis.py  test_circuit_breaker.py  test_core_errors.py  test_core_health.py  test_core_logging.py  test_core_models.py  test_core_schemas.py  test_core_ssrf.py  test_core_telemetry.py  test_fmea_fixes.py  test_ml_base_model.py  test_ml_lyric_parsing.py  test_ml_model_instantiation.py  test_ml_pidgin_patterns.py  test_ml_pipeline.py  test_ml_quality_gate.py  test_ml_service_routes.py  test_property_based.py  test_security.py  test_security_owasp.py  test_worker_audio.py  test_worker_celery_wrappers.py  test_worker_cleanup.py  test_worker_db.py  test_worker_dlq.py  test_worker_generation.py  (+5 more)
(+16 files in other folders)
