[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbedu-core"
version = "0.1.0"
description = "Gbẹdu core — shared models, config, DB, auth, and observability"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
	"pydantic[email]>=2.7",
	"pydantic-settings>=2.3",
	"sqlalchemy>=2.0.30",
	"asyncpg>=0.29",
	"alembic>=1.13",
	"structlog>=24.1",
	"uuid6>=2022.10.25",
	"python-jose[cryptography]>=3.3",
	"bcrypt>=4.0",
	"tenacity>=8.3",
	"circuitbreaker>=2.0",
	"opentelemetry-api>=1.24",
	"opentelemetry-sdk>=1.24",
	"opentelemetry-instrumentation-sqlalchemy>=0.45b0",
	"opentelemetry-exporter-otlp-proto-grpc>=1.24",
	"prometheus-client>=0.20",
	"fastapi>=0.111",
	"httpx>=0.27",
	"redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gbedu_core"]

[tool.uv.sources]
# No workspace cross-deps at this level — core is the base

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
