[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbedu-api"
version = "0.1.0"
description = "Gbẹdu API — FastAPI backend service"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
	"gbedu-core",
	"fastapi>=0.111",
	"uvicorn[standard]>=0.30",
	"httpx>=0.27",
	"python-multipart>=0.0.9",
	"boto3>=1.34",
	"stripe>=9.9",
	"aiosmtplib>=3.0",
	"jinja2>=3.1",
	"slowapi>=0.1.9",
	"opentelemetry-instrumentation-fastapi>=0.45b0",
	"opentelemetry-instrumentation-httpx>=0.45b0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gbedu_api"]

[tool.uv.sources]
gbedu-core = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
