[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbedu-ml"
version = "0.1.0"
description = "Gbẹdu ML — inference service for Afrobeats generation models"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
	"gbedu-core",
	"gbedu-audio",
	"fastapi>=0.111",
	"uvicorn[standard]>=0.30",
	"torch>=2.3",
	"torchaudio>=2.3",
	"transformers>=4.42",
	"accelerate>=0.30",
	"peft>=0.11",
	"huggingface-hub>=0.23",
	"opentelemetry-instrumentation-fastapi>=0.45b0",
	"bitsandbytes>=0.43",
	# RVC: install from source — rvc-python pip package has numpy conflict
	# pip install git+https://github.com/RVC-Project/Retrieval-based-Voice-Conversion-WebUI.git
	# acestep: not yet on PyPI — install from source:
	# pip install git+https://github.com/ace-step/ACE-Step.git
]

[tool.hatch.build.targets.wheel]
packages = ["src/gbedu_ml"]

[tool.uv.sources]
gbedu-core = { workspace = true }
gbedu-audio = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
