[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gbedu-worker"
version = "0.1.0"
description = "Gbẹdu Worker — Celery task pipeline for audio generation and processing"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
	"gbedu-core",
	"gbedu-audio",
	"celery[redis]>=5.4",
	"kombu>=5.3",
	"boto3>=1.34",
	"httpx>=0.27",
	"stripe>=9.9",
	"opentelemetry-instrumentation-celery>=0.45b0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gbedu_worker"]

[tool.uv.sources]
gbedu-core = { workspace = true }
gbedu-audio = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
